CI: test on Java 17+ (17/21) and standardize Arrow memory + scoped tests